# dotfiles

./: .emacs  .envrc  .gitconfig  .gitignore  .gitmodules  .gittest  .gitutils  .justfile  .mailmap  .mise.toml  .nvim.lua  .ruff.toml  .taskrc  .tmux.conf  .vimrc  .vimrc-tiny  .zshenv  .zshrc  Brewfile  Makefile  MakefileVim  MakefileVim.mk  README.md  bashrc  dots  gitconfig  gnome_terminal.dconf  install_vim.sh  link.sh  luafmt.toml  mise.toml  opencode.json  pyproject.toml  taskrc  tmux-italics.terminfo  tmux.conf  vimrc
ag/: .agignore
aria2/.aria2/: aria2.conf
asdf/: .tool-versions
bat/: config
bat/.config/bat/: config
beets/: Dockerfile  config.yaml  docker-entrypoint.sh  shell.sh
beets/.config/beets/: config.yaml
beets_docker/: Dockerfile  config.yaml  shell.sh
chore/.config/chore/: config.toml
chorebin/backups/: .cleanup.toml  .restic.toml  .vault  cleanup  new  restic  unlock
chorebin/up/: apt  apt.hjson  asdf  asdf.hjson  nvim
ctags/: .ctagsrc
curl/: .curlrc
direnv/.config/direnv/: direnv.toml
fish/: config.fish  fish_plugins
fish/.config/fish/: config.fish  fish_plugins
fish/configs/: asdf.fish  base.fish  bat.fish  dir_colors.fish  fzf.fish  iterm2.fish  less.fish  locales.fish  nvim.fish  prompt.fish  pyenv.fish  python.fish  theme.fish  tmux.fish  zoxide.fish
fish/configs/completions/: asdf_run.fish  bd.fish
fish/configs/functions/: _bd_dirnames.fish  asdf_run.fish  bd.fish  c.fish  fish_edit_local_config.fish  g.fish  gdf.fish  gs.fish  l.fish  t.fish  ta.fish  v.fish
git/: .gitconfig  .gitutils  dot-gitconfig  dot-gitignore
git/.config/git/: attributes  ignore
git/.config/lazygit/: config.yml
git/.config/serie/: config.toml
global/: .globalrc
homebrew/.config/brew/: Brewfile
httpie/.httpie/: config.json
isort/: .isort.cfg
just/.config/just/: justfile
kitty/.config/kitty/: kitty.conf  macos.conf  theme.conf
mcp/.config/mcphub/: servers.json
mise/.config/mise/: config.toml  env.json  settings.toml  sops.yaml
neovim/: _compe.lua  _lsp.lua  _utils.lua  _vsnip.lua  compe_helpers.lua  helpers.lua  init.lua  lsp_helpers.lua
neovim/.config/neovide/: config.toml
neovim/.config/nvim/: init.lua
neovim/ftplugin/: gitcommit.lua  go.lua  json.lua  lua.lua  make.lua  python.lua  qf.lua
neovim/lua/: _lsp.lua  _snippet_utils.lua  _utils.lua
neovim/lua/_/: keymappings.lua  lsp.lua  options.lua  utils.lua
neovim/lua/_commands/: repo_link.lua
neovim/lua/plugins/: better-escape.lua  contextvt.lua  dropbar.lua  gitsigns.lua  gutentags.lua  lualine.lua  neo-tree.lua  null-ls.lua  nvim-autopairs.lua  nvim-cmp.lua  nvim-navic.lua  nvim-snippy.lua  nvim-surround.lua  registers.lua  (+8 more)
neovim/snippets/: all.lua  global.json  python.json  python.lua
nodejs/: .npmrc
python/: .pdbrc  .pythonrc
ripgrep/: .ripgreprc
scripts/: retry
scripts/.bin/: backup  borg-backup  eachdir  git-ask  git-dump  git-jlog  git-test  rbackup  retry
sqlite3/: .sqliterc
starship/.config/: starship.toml
tmux/: .tmux.conf
ultisnips/: all.snippets  gitcommit.snippets  python.snippets
vim/: .vimrc
vim/.ultisnips/: all.snippets  erlang.snippets  python.snippets  rst.snippets  sh.snippets
vimrc/: basic.vim  code.vim  extended.vim
vimrc/.vimconf/: code.vim  common.vim  gui.vim  keymap.vim  plugins.vim  plugins_settings.vim
vimrc/includes/: code.vim  common.vim  plugins.vim
weechat/.weechat/: aspell.conf  buffers.conf  charset.conf  iset.conf  plugins.conf  weechat.conf
zsh/: .zshenv  .zshrc  aliases.sh  env.sh  functions.sh  init.sh  rc.sh
zsh/.zsh/: aliases.sh  binds.sh  functions.sh  init.sh
(+381 files in other folders)
