[tool.poetry]
name = "dotfiles"
version = "0.0.0"
description = "My dotfiles"
authors = ["Sergey Arkhipov <nineseconds@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 80
target-version = ["py312"]

[tool.flake8]
max-line-length = 80
exclude = [
  '.git',
  '__pycache__'
]
ignore = [
  'IND101',
  'VNE001',
  'E203',
  'W503',
]
literal-inline-quotes = "double"
literal-multiline-quotes = "double"
enable-extensions = "G"
max-cognitive-complexity = 10

[tool.isort]
profile = "black"
balanced_wrapping = true
skip_gitignore = false
line_length = 80
force_single_line = true
use_parentheses = true
atomic = true
lines_before_imports = 0
lines_after_imports = 2
combine_star = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
ensure_newline_before_comments = true
treat_all_comments_as_code = true
honor_noqa = true

[tool.mypy]
python_version = "3.12"
strict = true
incremental = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
flake8-2020 = "^1.8.1"
flake8-absolute-import = "^1.0.0.2"
flake8-all-not-strings = "^0.0.1"
flake8-black = "^0.3.6"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.2.6"
flake8-builtins = "^2.2.0"
flake8-class-attributes-order = "^0.1.3"
flake8-clean-block = "^0.1.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.14.0"
flake8-datetime-utcnow-plugin = "^0.1.2"
flake8-datetimez = "^20.10.0"
flake8-debugger = "^4.1.2"
flake8-functions-names = "^0.4.0"
flake8-implicit-str-concat = "^0.4.0"
flake8-indent-in-def = "^0.1.2"
flake8-isort = "^6.1.1"
flake8-literal = "^1.4.0"
flake8-logging-format = "^0.9.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-picky-parentheses = "^0.5.4"
flake8-printf-formatting = "^1.1.2"
flake8-pyproject = "^1.2.3"
flake8-return = "^1.2.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-simplify = "^0.21.0"
flake8-string-format = "^0.3.0"
flake8-use-pathlib = "^0.3.0"
flake8-useless-assert = "^0.4.4"
flake8-variables-names = "^0.0.6"
flake8-warnings = "^0.4.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
