[tool.poetry]
name = "dotfiles"
version = "0.0.0"
description = "My dotfiles"
authors = ["Sergey Arkhipov <nineseconds@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"
balanced_wrapping = true
skip_gitignore = false
line_length = 80
force_single_line = true
use_parentheses = true
atomic = true
lines_before_imports = 0
lines_after_imports = 2
combine_star = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
ensure_newline_before_comments = true
treat_all_comments_as_code = true
honor_noqa = true

[tool.mypy]
python_version = "3.12"
strict = true
incremental = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
